Fixed spacing and colors, updated contact info

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,52 +1,75 @@
-* {
-    color: #4271b4;
-}
-
-h1, h2, .clickems a {
-    color: #0d274b;
-
-}
 body {
     background-color: black;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
-
+a {
+    text-decoration: none;
+}
+ul {
+    list-style: none;
+}
 .header {
     display: flex;
     justify-content: space-around;
-    background: #ff4800e0;
-    border-radius: 33%;
+    background-color: #ff4800e0;
+    background-image: linear-gradient(to right, #ff4800e0, #0f2d57);
+    border-radius: 31%;
 }
 
 .header h1 {
     font-size: 50px;
-}
+    color: #0f2d57;
+    padding: 20px;
 
+}
+/* Not yet sure if I really need this */
 .page-links {
     width: 50%;
 }
 
+/* header links layout */
 .clickems {
     display: flex;
-    flex-direction: row;
+    flex-flow: row wrap;
+    justify-content: space-between;
+    font-size: 24px;
+    padding: 40px;
     text-decoration: none;
-    justify-content: space-evenly;
-    align-items: stretch;
-    font-size: 20px;
 }
 
+/* colorizing the links and paths */
+.bio {
+    color: lightskyblue;
+}
+
+.work {
+    color: green;
+}
+
+.contact, .content-contact a {
+    color: #ff4800e0;
+}   
+
+ 
+/* What a view! */
 .hero {
+    display: flex;
     margin: 0;
     width: 100%;
-    height: 600px;
+    height: 450px;
     background-image: url("../../assets/images/IMG_2816.jpeg");
     background-size: cover;
     background-position: center;
+    flex-flow: row-reverse;
+    align-items: flex-end;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
 }
 
 .bio, .work, .contact {
     display: flex;
-    justify-content: space-around;
-    margin: 0 auto 30px auto;
+    justify-content: space-between;
+    margin: 6px auto;
 }
 
 .header-bio, .header-work, .header-contact {
@@ -58,7 +81,7 @@ body {
 }
 
 .content-bio, .content-work, .content-contact {
-    border-left: solid 4px #0d274b;
+    border-left: solid 4px #0f2d57;
     width: 80%;
     padding-left: 10px;
 }
@@ -84,5 +107,14 @@ body {
 .also-projects button {
     width: 50%;
     height: 200px;
+
+}
+
+.contact ul {
+    display: flex;
+    flex-flow: row;
+    justify-content: space-around;
+    padding: 40px;
+    font-size: 26px;
 
 }
